# mdflux_macOS

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  THIRD-PARTY-LICENSES.md  index.html
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
app/: package-lock.json  package.json
app/src/: app.html
app/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/resources/sidecar/: audio.py  audio_worker.py  capabilities.py  cleanup.py  errors.py  health.py  main.py  ocr.py  ocr_worker.py  preflight.py  provider.py  requirements-ocr.in  requirements.txt  worker.py
app/src-tauri/src/: bootstrap.rs  config.rs  converter.rs  ipc.rs  lib.rs
app/src/lib/: BatchQueueView.svelte  BatchSummaryView.svelte  ConvertProgress.svelte  DiagnosticsView.svelte  DocViewer.svelte  DropZone.svelte  ErrorCard.svelte  ModeSwitch.svelte  ProvisionView.svelte  ResultView.svelte  StagingView.svelte  Stepper.svelte  cleanup.ts  diff.ts  formats.ts  mdpreview.ts  naming.ts  tokens.css
app/src/routes/: +layout.svelte  +page.svelte
scripts/: make-macos.sh  make-portable.ps1
