[package]
name = "app"
version = "0.1.0"
description = "MDFlux"
authors = []
edition = "2021"
license = "MIT"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri        = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
tokio        = { version = "1", features = ["full"] }
reqwest      = { version = "0.12", default-features = false, features = ["native-tls"] }
zip          = "2"
flate2       = "1"
tar          = "0.4"
sha2         = "0.10"
